update okta tutorial

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -82,7 +82,7 @@ To configure your service provider (Clerk), you will need to add these two field
 1. On the **Set up Single Sign-On with SAML** page, you will see the **Basic SAML Configuration** section. Select the **Edit** button. This will open a **Basic SAML Configuration** modal.
 2. Go back to the Clerk Dashboard and scroll down to the **Service Provider configuration** section.
 3. Copy the **Identifier (Entity ID)** and the **Reply URL (Assertion Consumer Service URL)**.
-4. In the Azure Portal, in the **Basic SAML Configuration** modal, paste the **Identifier (Entity ID)** and the **Reply URL (Assertion Consumer Service URL)** into the corresponding fields.
+4. In the Azure Portal, in the **Basic SAML Configuration** modal, paste these values into their respective fields.
 5. Select **Save** at the top of the modal.
 
 ### Configure your identity provider
@@ -93,6 +93,10 @@ To configure your service provider (Clerk), you will need to add these two field
 4. Under the **Metadata configuration** option, paste the **App Federation Metadata Url**.
 
 ### Map Azure claims to Clerk attributes
+
+Mapping the claims in your IdP to the attributes in Clerk ensures that the data from your IdP is correctly mapped to the data in Clerk.
+
+The only Azure claim that is necessary to map is the email address claim. This is the email address that your users will use to log in to your application.
 
 1. On the **Set up Single Sign-On with SAML** page, find the **Attributes & Claims** section.
 2. Select the **Edit** button.
