--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -66,6 +66,7 @@ There are two options for configuring your IdP:
 2. In the Clerk Dashboard, find the **Identity Provider configuration** section.
 3. Under the **Metadata configuration** option, select the **Upload** button.
 4. Upload the metadata file you downloaded from Google.
+5. Select the **Save changes** button to complete the setup.
 
 #### Custom configuration
 
@@ -92,7 +93,7 @@ To configure your service provider (Clerk), you will need to add these three fie
 
 1. In the Clerk Dashboard, find the **Service Provider configuration** section.
 2. Copy the **ACS URL** and **Entity ID**.
-3. In the Google Admin Console, paste the **ACS URL** and **Entity ID**.
+3. In the Google Admin Console, paste these values into their respective fields.
 4. Under the **Name ID** section, select the dropdown for **Name ID format** and select **Email**.
 
 ### Map Google claims to Clerk attributes
