--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -1,6 +1,6 @@
 ---
 title: Okta Workforce
-description: Learn how to integrate Okta Workforce via SAML SSO.
+description: Learn how to integrate Okta Workforce with Clerk using SAML SSO.
 ---
 
 # Okta Workforce
@@ -12,7 +12,7 @@ description: Learn how to integrate Okta Workforce via SAML SSO.
       link: "/docs/quickstarts/setup-clerk",
     },
     {
-      title: "Set up a local project",
+      title: "Add the appropriate Clerk SDK to your application",
       link: "/docs/quickstarts/overview",
     },
   ]}
@@ -22,146 +22,91 @@ description: Learn how to integrate Okta Workforce via SAML SSO.
 
 </TutorialHero>
 
-Integrating Okta Workforce with Clerk allows you to use it as an Identity Provider for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
+Integrating Okta Workforce with Clerk allows you to use it as an Identity Provider (IdP) for your Clerk application to authenticate your users and manage their access to your application via SAML SSO.
 
 ## Tutorial
 
-<Callout type="info">
-  You must have a local project with Clerk set up already to follow this tutorial. See [the quickstart docs](/docs/quickstarts/overview) to get started.
-</Callout>
-
 <Steps>
 
-### Setup Clerk Enterprise Connection
-1. Create a new Enterprise Connection in the Clerk Dashboard. 
-2. Fill out the form with the details for your Okta Application.
+### Set up Enterprise Connection in Clerk
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/create-enterprise-connection-clerk-dash.avif"
-  alt="Create a new Enterprise Connection in the Clerk Dashboard"
-/>
+To create a SAML connection in Clerk,
 
-### Find the Okta Enterprise Applications 
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
+2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
+3. Select the **Create connection** button.
+4. You will be presented with a modal to create a new connection. Fill in the required fields.
+- **Name** - A unique name for the connection. This is so you can tell your connections apart.
+- **Domain** - The email domain for which you will enable Enterprise SSO.
+- **Identity Provider** - The IdP you are using. For this tutorial, select **Okta Workforce**.
+5. Once you have filled in these fields, you will be directed to the **Connection** page which has the configuration settings for the connection you just created. **Do not select the Enable connection toggle just yet.** You need to fully configure your IdP first before exposing your connection to your users while you're in the, sometimes long, process of configuring and testing it.
+6. Leave this page open. You will need to come back to it to complete the setup.
 
+### Create a new Enterprise Application in Okta
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/find-create-okta-application.avif"
-  alt=""
-/>
+To create a new Enterprise Application in Okta,
 
-###  Create a new Okta Enterprise Application
+1. Navigate to [Okta](https://www.okta.com/) and sign in.
+2. In the Okta dashboard, select **Admin** in the top right corner.
+3. In the navigation sidebar,  select the **Applications** dropdown and select **Applications**.
+4. Select the **Create App Integration** button.
+5. In the **Create a new app integration** modal, select the **SAML 2.0** option and select the **Next** button.
+6. Once redirected to the **Create SAML Integration** page, fill in the **General Settings** fields. An **App name** is required.  You can also upload an **App logo** if you wish.
+7. Select the **Next** button to continue.
 
+### Configure your service provider
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/choose-saml-in-app-create.avif"
-  alt=""
-/>
+Once you have moved forward from the **General Settings** instructions, you will be presented with the **Configure SAML** page.
 
-### Find Okta Browser Plugin
+To configure your service provider (Clerk), you will need to add these two fields to your IdP's application:
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/find-okta-browser-plugin.avif"
-  alt=""
-/>
+- **Single sign-on URL** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **Audience URI (SP Entity ID)** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
 
-#### Give the Application a Name
+1. In the Clerk Dashboard, find the **Service Provider configuration** section.
+2. Copy the **Single sign-on URL** and **Audience URI (SP Entity ID)**.
+3. In the Okta dashboard, paste these values into their respective fields.
 
-<Images width={3024} height={1652} src="/docs/images/authentication/saml/okta/name-okta-app.avif" alt="" />
+### Map Okta claims to Clerk attributes
 
-### SAML Configuration
+Mapping the claims in your IdP to the attributes in Clerk ensures that the data from your IdP is correctly mapped to the data in Clerk.
 
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/saml-settings-okta-side.avif"
-  alt=""
-/>
+1. In the Okta dashboard, find the **Attribute Statements (optional)** section.
+2. For the **Name** field, enter `mail`.
+3. For the **Value** field, choose `user.email` from the dropdown.
+4. Select the **Add Another** button to add another attribute.
+5. For the **Name** field, enter `firstName`.
+6. For the **Value** field, choose `user.firstName` from the dropdown.
+7. Select the **Add Another** button to add another attribute.
+8. For the **Name** field, enter `lastName`.
+9. For the **Value** field, choose `user.lastName` from the dropdown.
+10. Scroll to the bottom of the page and select the **Next** button to continue.
+11. You will be redirected to the **Feedback** page. Fill out the feedback however you would like and select the **Finish** button to complete the setup.
 
-#### Clerk Reference for SAML Settings
+### Configure your identity provider
 
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/clerk-side-saml-config-urls.avif"
-  alt=""
-/>
+Once you have completed the setup in Okta, you will be redirected to the application instances page with the **Sign On** tab selected.
 
-### Attribute Mapping in Okta to Clerk 
+1. Under **Sign on methods**, copy the **Metadata URL**.
+2. In the Clerk Dashboard, find the **Identity Provider configuration** section.
+3. Under the **Metadata configuration** option, paste the **Metadata URL**.
+4. Select the **Save changes** button to complete the setup.
 
-You will want to add the following fields to the attribute mapping in Okta then proceed by clicking on "Next" to continue.
-<Images 
-width={3024} 
-height={1652} 
-src="/docs/images/authentication/saml/okta/okta-attribute-mapping.avif" 
-alt="Attribute Mapping in Okta to Clerk" 
-/>
+### Enable the connection for Clerk
 
-Select "software vendor" as the application type and click "Finish" to complete the setup.
+To make the connection available for your users to authenticate with,
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/software-vendor.avif"
-  alt="Select 'software vendor' as the application type and click 'Finish' to complete the setup."
-/>
+1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
+2. Toggle on the **Enable connection** option.
 
-### Assign Users to the Application
-1. Navigate to the "Assignments" tab 
-2. Click on "Assign" and "Assign to People" or "Assign to Groups"
+### Assign selected user or group in Azure
 
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/navigate-to-assignments.avif"
-  alt=""
-/>
+You need to assign your users/user groups to your Enterprise Application. For example, if you were part of the Clerk organization, you would have access to users and groups in the Clerk organization. In this case, you could assign one or more users or entire groups to the Enterprise Application you just created.
 
-#### Find the User or Group to Assign 
-
-Once you have found the user or group you want to assign, click "Assign" to complete the process.
-<Images
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/assign-user.avif"
-  alt=""
-/>
-
-### Okta Metadata URL 
-
-Copy the Okta Metadata URL from Okta
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/okta-metadata-url.avif"
-  alt=""
-/>
-
-Paste the Okta Metadata URL into the Clerk Dashboard and save changes to complete the setup.
-
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/clerk-metadata-location.avif"
-  alt=""
-/>
-
-
-### Enable the Connection in Clerk Dashboard
-
-Once you have pasted the Okta Metadata URL into the Clerk Dashboard, you will need to enable the connection to complete the setup.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/authentication/saml/okta/enable-connection.avif"
-  alt="Enable the connection in the Clerk Dashboard"
-/>
+1. In the Okta dashboard, select the **Assignments** tab.
+2. Select the **Assign** dropdown. You can either select **Assign to people** or **Assign to groups**.
+3. In the search field, enter the user or group of users that you want to assign to the Enterprise Application.
+4. Select the **Assign** button next to the user or group that you want to assign.
+5. Select the **Done** button to complete the assignment.
 
 </Steps>
