--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -5,7 +5,7 @@ description: Clerk supports Enterprise SSO via the SAML protocol so that you can
 
 # SAML
 
-Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdPs credentials and have their user data synchronized with Clerk.
+Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdP's credentials and have their user data synchronized with Clerk.
 
 Currently, Clerk supports the following IdPs for Enterprise SSO:
 
