--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -22,7 +22,7 @@ Currently, Clerk supports the following IdPs for Enterprise SSO:
 
 During SAML SSO and after a user has successfully authenticated, the IdP provides Clerk with the corresponding user data. After each successful sign in, Clerk handles keeping the user data up-to-date based on the response of the SAML provider. This means that if a user's data changes on the IdP side, Clerk will automatically update the user's data in the Clerk database.
 
-To disable this behavior,
+To disable this behavior:
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
