--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -78,4 +78,4 @@ It will cost $50 per active connection per month for production instances. Conne
 
 ### Can I get a bulk discount?
 
-Yes, [reach out to us](https://clerk.com/support) and we will work a plan out.
+ Yes, [reach out to support](https://clerk.com/support) and we will work a plan out.
