--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -7,12 +7,6 @@ description: Clerk supports Enterprise SSO via the SAML protocol so that you can
 
 Clerk supports Enterprise SSO via the SAML protocol, enabling you to create authentication strategies for an Identity Provider (IdP). With Enterprise SSO, users can sign in seamlessly using their IdP's credentials and have their user data synchronized with Clerk.
 
-Currently, Clerk supports the following IdPs for Enterprise SSO:
-
-- [Microsoft Azure AD](https://learn.microsoft.com/en-us/entra/fundamentals/whatis)
-- [Google Workspace](https://workspace.google.com/)
-- [Okta Workforce](https://www.okta.com/workforce-identity/)
-
 ## Requirements
 
 - A Clerk application that includes the [Enhanced authentication add-on](https://clerk.com/pricing), available with the Pro plan.
@@ -78,4 +72,4 @@ It will cost $50 per active connection per month for production instances. Conne
 
 ### Can I get a bulk discount?
 
- Yes, [reach out to support](https://clerk.com/support) and we will work a plan out.
+Yes, [reach out to support](https://clerk.com/support) to work out a custom plan.
