use colons instead of commas before lists

--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -30,7 +30,7 @@ Integrating Microsoft Azure AD with Clerk allows you to use it as an Identity Pr
 
 ### Set up Enterprise Connection in Clerk
 
-To create a SAML connection in Clerk,
+To create a SAML connection in Clerk:
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
@@ -44,7 +44,7 @@ To create a SAML connection in Clerk,
 
 ### Create a new Enterprise Application in Azure
 
-To create a new Enterprise Application in Azure,
+To create a new Enterprise Application in Azure:
 
 1. Navigate to the [Azure Portal](https://azure.microsoft.com/en-us/get-started/azure-portal) and sign in.
 2. Under the **Azure Services** section, find and select **Enterprise Applications**. You may have to go to the [**All services**](https://portal.azure.com/#allservices) page and then scroll down to the **Identity* section to find it.
@@ -106,7 +106,7 @@ The only Azure claim that is necessary to map is the email address claim. This i
 
 ### Enable the connection for Clerk
 
-To make the connection available for your users to authenticate with,
+To make the connection available for your users to authenticate with:
 
 1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
 2. Toggle on the **Enable connection** option.
