--- a/docs/authentication/saml/okta.mdx
+++ b/docs/authentication/saml/okta.mdx
@@ -30,7 +30,7 @@ Integrating Okta Workforce with Clerk allows you to use it as an Identity Provid
 
 ### Set up Enterprise Connection in Clerk
 
-To create a SAML connection in Clerk,
+To create a SAML connection in Clerk:
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
@@ -44,7 +44,7 @@ To create a SAML connection in Clerk,
 
 ### Create a new Enterprise Application in Okta
 
-To create a new Enterprise Application in Okta,
+To create a new Enterprise Application in Okta:
 
 1. Navigate to [Okta](https://www.okta.com/) and sign in.
 2. In the Okta dashboard, select **Admin** in the top right corner.
@@ -94,7 +94,7 @@ Once you have completed the setup in Okta, you will be redirected to the applica
 
 ### Enable the connection for Clerk
 
-To make the connection available for your users to authenticate with,
+To make the connection available for your users to authenticate with:
 
 1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
 2. Toggle on the **Enable connection** option.
