--- a/docs/authentication/saml/google.mdx
+++ b/docs/authentication/saml/google.mdx
@@ -30,7 +30,7 @@ Integrating Google Workspace with Clerk allows you to use it as an Identity Prov
 
 ### Set up Enterprise Connection in Clerk
 
-To create a SAML connection in Clerk,
+To create a SAML connection in Clerk:
 
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
 2. In the navigation sidebar, select **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
@@ -44,7 +44,7 @@ To create a SAML connection in Clerk,
 
 ### Create a new Enterprise Application in Google
 
-To create a new Enterprise Application in Google,
+To create a new Enterprise Application in Google:
 
 1. Navigate to the [Google Admin Console](https://admin.google.com/) and sign in.
 2. In the navigation sidebar, under **Apps**, select **Web and mobile apps**.
@@ -136,7 +136,7 @@ Once the configuration is complete, you will be redirected to the app details pa
 
 ### Enable the connection for Clerk
 
-To make the connection available for your users to authenticate with,
+To make the connection available for your users to authenticate with:
 
 1. In the Clerk Dashboard, scroll to the top of the **Connection** page.
 2. Toggle on the **Enable connection** option.
