--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -5,7 +5,7 @@ description: Learn how to manage user access to your application by configuring 
 
 # Restrictions
 
-Clerk provides a set of restriction options designed to provide you with enhanced control over who can gain access to your application. Through these restriction settings, you can limit sign-ups or prevent accounts with specific identifiers from accessing your application. These [identifiers](/docs/authentication/configuration/sign-up-sign-in-options#identifiers) can be email addresses, phone numbers, and even entire domains.
+Clerk provides restriction options that give you enhanced control over who can access your application. These options enable you to limit sign-ups or prevent accounts with specific [identifiers](/docs/authentication/configuration/sign-up-sign-in-options#identifiers), such as email address, from accessing your application.
 
 There are two main types of restrictions available:
 
