--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -12,7 +12,7 @@ There are two main types of restrictions available:
 - [Allowlist](#allowlist) - Allows only specific identifiers to sign up for your application.
 - [Blocklist](#blocklist) - Blocks specific identifiers from signing up for your application.
 
-In addition to these, there is also the [Block email subaddresses](#block-email-subaddresses) feature, which blocks email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts.
+There is also the [Block email subaddresses](#block-email-subaddresses) feature, which blocks email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts.
 
 All of these restrictions can be enabled and used together to provide a more secure and controlled environment for your application. In the case you have enabled the allowlist and the blocklist and have added the same identifier in both, the allowlist takes precedence.
 
