--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -30,7 +30,7 @@ To enable this feature:
 3. In the **Allowlist** section, toggle on **Enable allowlist**.
 
 <Callout type="danger">
-  Be aware that turning on the Allowlist feature without adding any identifier exceptions blocks *all* sign-ups.
+  Enabling the Allowlist without adding any identifier exceptions blocks *all* sign-ups.
 </Callout>
 
 ## Blocklist
