--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -22,7 +22,9 @@ All of these restrictions can be enabled and used together to provide a more sec
   Allowlist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.
 </Callout>
 
-By adding specific identifiers to the allowlist, *only* users with those identifiers will be able to sign up for your application, while others will be blocked. This is most commonly useful for internal tools, where you want to allow only users with your company domain to have access to the application. After creating an account, users cannot change their identifier to bypass the allowlist, making this feature a secure way to control who can access your application. For example, if you add `clerk.dev` as an allowed email domain, any user with a `@clerk.dev` email address can sign up for your application. Email addresses from different domains will not be able to sign up.
+By adding specific identifiers to the allowlist, *only* users with those identifiers will be able to sign up for your application, while others will be blocked. This is useful for internal tools, where you want to allow only users with your company domain to have access to the application.
+
+After creating an account, users cannot change their identifier to bypass the allowlist, making this feature a secure way to control who can access your application. For example, if you add `clerk.dev` as an allowed email domain, any user with a `@clerk.dev` email address can sign up for your application. Email addresses from different domains will not be able to sign up.
 
 To enable this feature:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
