--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -41,7 +41,7 @@ To enable this feature:
   Blocklist is a premium feature and is not available on the Free plan. [Upgrade your plan](https://clerk.com/pricing) to enable this feature.
 </Callout>
 
-By adding specific identifiers to the blocklist, users with those identifiers will be blocked from signing up for your application. This is most commonly useful in attack prevention. For example, if you have spam accounts signing up with a specific email domain, you can block those email addresses or the entire email domain to prevent further sign-ups. For example, if you add `clerk.dev` as a blocked email domain, it means that anybody with a `@clerk.dev` email address will not be able to sign up for your application.
+By adding specific identifiers to the blocklist, users with those identifiers will be blocked from signing up for your application. This is useful for attack prevention, such as when multiple spam accounts sign up for your application. For example, if you add `clerk.dev` as a blocked email domain, it means that anybody with a `@clerk.dev` email address will not be able to sign up for your application.
 
 To enable this feature:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
