remove redundant callout about allowlist taking precendence

--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -14,7 +14,7 @@ There are two main types of restrictions available:
 
 There is also the [Block email subaddresses](#block-email-subaddresses) feature, which blocks email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts.
 
-All of these restrictions can be enabled and used together to provide a more secure and controlled environment for your application. In the case you have enabled the allowlist and the blocklist and have added the same identifier in both, the allowlist takes precedence.
+All of these restrictions can be enabled and used together to provide a more secure and controlled environment for your application.
 
 ## Allowlist
 
@@ -49,7 +49,7 @@ To enable this feature:
 3. In the **Blocklist** section, toggle on **Enable blocklist**.
 
 <Callout type="warning" emoji="⚠️">
-  In the case you have enabled the Allowlist and the Blocklist and have added the same identifier in both, the Allowlist takes precedence.
+  In the case that you have enabled the allowlist and the blocklist and have added the same identifier in both, the allowlist takes precedence.
 </Callout>
 
 For additional security, adding an individual email address to the blocklist will also block any attempts to sign up with the email address modified to contain a subaddress. Subaddresses are identified by the presence of any of the following characters in the local part of the email address: `+`, `#`, `=`.
