--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -59,7 +59,7 @@ For example, if you add `john.doe@clerk.dev` as a blocked email address, it mean
 
 ## Block email subaddresses
 
-The block email subaddresses feature allows you to block all email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts. For example, an email address like `user+sub@clerk.com` will be blocked.
+**Block email subaddresses** allows you to block all email addresses that contain the characters `+`, `=` or `#` from signing up or being added to existing accounts. For example, an email address like `user+sub@clerk.com` will be blocked.
 
 <Callout type="info">
   Existing accounts with email subaddresses will not be affected by this restriction, and will still be allowed to sign in.
