Add bold to a reference to a Clerk Dashboard feature in the Restrictions doc

--- a/docs/authentication/configuration/restrictions.mdx
+++ b/docs/authentication/configuration/restrictions.mdx
@@ -72,7 +72,7 @@ To enable this feature:
 
 ### Block sign-ups that use disposable email addresses
 
-The block disposable email addresses feature allows you to block all email addresses that are *known to be disposable* from signing up for your application. This is useful to prevent spam accounts from signing up.
+**Block disposable email addresses** allows you to block all email addresses that are *known to be disposable* from signing up for your application. This is useful to prevent spam accounts from signing up.
 
 To enable this feature:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com).
